<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.AutoBell.Activity.Welcome_AutobellActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/logo_black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_22ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_new"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_22ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autobell"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_22ssp"/>
    </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_level_of_features"
                android:textSize="@dimen/_14ssp"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/with_new_app"
                android:textSize="@dimen/_14ssp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:background="@drawable/round_rect_shape"
            android:padding="@dimen/_20sdp"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"/>
        <Button
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/round_rect_shape"
            android:padding="@dimen/_20sdp"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"/>
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_BecomeAClient"
                android:background="@drawable/round_rect_shape_red"
                android:padding="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/become_a_client"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>
  </LinearLayout>
